architecture-ide/tests/fixtures/negative/loader/bad_concept/concepts/Counter.concept
concept Counter

  purpose
    count things

  state
    total: int

  actions
    inc [ n: int ] => [ total: int ]
      add n to total

  operational principle
    after inc [ n: 1 ] => [ total: 1 ]
